2015-05-19         Arnold D. Robbins     <arnold@skeeve.com>

	* 4.1.3: Release tar ball made.

2015-04-29         Arnold D. Robbins     <arnold@skeeve.com>

	* gende.c, genbin.awk: New files.

2015-04-29         Arnold D. Robbins     <arnold@skeeve.com>

	* 4.1.2: Release tar ball made.

2014-09-04         Arnold D. Robbins     <arnold@skeeve.com>

	* chlistref.awk: New file. Finds @ref{} to non-chapters.

2014-06-08         Arnold D. Robbins     <arnold@skeeve.com>

	* testdfa.c: Minor improvements.

2014-04-08         Arnold D. Robbins     <arnold@skeeve.com>

	* 4.1.1: Release tar ball made.

2014-03-10         Arnold D. Robbins     <arnold@skeeve.com>

	* quoteconvert2.sh: Use .UTF-8 locales per request from
	Michal Jaegermann.

2014-03-08         Arnold D. Robbins     <arnold@skeeve.com>

	* quoteconvert2.sh, tryfmt.c, scanfmt.c: New files.

2013-12-21         Arnold D. Robbins     <arnold@skeeve.com>

	* testdfa.c: Fix some bugs and compiler warnings.

2013-12-12         Arnold D. Robbins     <arnold@skeeve.com>

	* do.outline: New file.

2013-06-27         Arnold D. Robbins     <arnold@skeeve.com>

	* ChangeLog: Created.
	* testdfa.c: Add ifdef around xalloc.h, for use with grep dfa.

2013-06-03         Arnold D. Robbins     <arnold@skeeve.com>

	* testdfa.c: New file.

2013-06-03         Arnold D. Robbins     <arnold@skeeve.com>

	* testnet.awk, testnet.c, fixdump.awk: New files.