@@ -1,3 +1,7 @@
+2015-05-27         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* mb_cur_max.c, timeformat.c: New files.
+
 2015-05-19         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* 4.1.3: Release tar ball made.
